--- a/python/Makefile
+++ b/python/Makefile
@@ -21,13 +21,25 @@ help:
 	@echo "Makefile for managing test environments"
 	@echo ""
 	@echo "Usage:"
+	@echo "  make venv                  Create virtual environment for newest, supported DBR version"
+	@echo "  make venv DBR=<version>    Create virtual environment for a specific DBR version"
+	@echo "  make test                  Run tests for the newest, supported DBR version"
 	@echo "  make test DBR=<version>    Run tests for a specific DBR version"
+	@echo "  make test-all              Run tests for all supported DBR versions"
+	@echo "  make coverage-report       Generate test coverage report"
 	@echo "  make lint                  Run linters"
 	@echo "  make type-check            Run type checks"
 	@echo "  make build-dist            Build distribution"
 	@echo "  make build-docs            Build documentation"
-	@echo "  make coverage-report       Generate test coverage report"
+	@echo "  make all-local             Run all local tests and checks"
 	@echo "  make clean                 Remove all generated files"
+	@echo ""
+	@echo "Available Environment Versions:"
+	@echo "  154 - Python 3.11 (default)"
+	@echo "  143 - Python 3.10"
+	@echo "  133 - Python 3.10"
+	@echo "  122 - Python 3.9"
+	@echo "  113 - Python 3.9"
 	@echo ""
 
 # Create virtual environment if it doesn't exist
