--- a/python/tox.ini
+++ b/python/tox.ini
@@ -51,6 +51,8 @@ deps =
     types-openpyxl
 commands =
     mypy --install-types --non-interactive {toxinidir}/tempo
+    pip show mypy
+    pip show mypy_extensions
 
 [testenv:build-dist]
 description = build distribution
